# evalbench

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  cloudbuild.yaml  noxfile.py  pyproject.toml  requirements.txt
.github/: labels.yml
.github/workflows/: pytest.yml
datasets/bat/: example_run_config.yaml
datasets/claude-code-tools/: claude-code-fake.evalset.json  claude-code.evalset.json  example_run_config.yaml
datasets/codex-cli-tools/: codex-cli.evalset.json  example_run_config.yaml  example_run_fake_config.yaml
datasets/db-engine-convertor/: README.md
datasets/gemini-cli-tools/: example_run_config.yaml  gemini-cli.evalset.json
datasets/model_configs/: codex_cli_fake_model.yaml  codex_cli_model.yaml
docs/: claude_code_agent_testing.md  codex_cli_agent_testing.md  gemini_cli_agent_testing.md  summarizer_documentation.md
docs/configs/: run-config.md
docs/examples/: GCP_CloudSQL_Example.ipynb  sqlite_example.ipynb
evalbench/: __init__.py  eval_server.py  eval_service.py  evalbench.py
evalbench/client/: eval_client.py
evalbench/databases/: alloydb.py  mysql.py  postgres.py  spanner.py
evalbench/dataset/: cortadoinput.py  dataset.py
evalbench/evalproto/: eval_connect.proto  eval_request.proto  eval_service.proto
evalbench/evaluator/: __init__.py  agentevaluator.py  agentorchestrator.py  cortadoevaluator.py  cortadoorchestrator.py  (+10 more)
evalbench_service/: Dockerfile  supervisord_cloudrun.conf  supervisord_combined.conf  supervisord_evalbench.conf
viewer/: ai_comparer.py  analyzer.md  conversations.py  dashboard.py  main.py  precompute_trends.py  pyproject.toml  run_frontend.sh  summarizer.py  trends.py  version.txt
(+56 files in other folders)
