[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-evalbench"
version = "1.7.1"
requires-python = ">=3.10"
description = "Evalbench - evaluation benchmarking framework"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "cloud-sql-python-connector[pg8000]",
    "google-cloud-alloydb-connector[pg8000]",
    "cloud-sql-python-connector[pytds]",
    "sqlalchemy-pytds",
    "google-genai",
    "google-cloud-secret-manager",
    "google-cloud-bigtable",
    "google-cloud-spanner",
    "sqlalchemy-spanner",
    "pandas",
    "pandas-gbq",
    "pymysql",
    "sqlalchemy",
    "pyaml_env",
    "pyarrow",
    "protobuf",
    "absl-py",
    "tabulate",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "aiologger",
    "jsonschema",
    "ratelimit",
    "backoff",
    "GitPython",
    "sqlparse",
    "redis",
    "anthropic[vertex]",
    "sqlglot",
    "pymongo",
    "mongomock",
    "rich",
    "google-adk",
    "google-cloud-geminidataanalytics>=0.11.0",
    "google-cloud-firestore",
    "google-cloud-iam",
    "google-cloud-storage",
    "dbt-core",
    "dbt-bigquery",
    "dbt-postgres",
    "a2a-sdk>=1.0.3",
]

[tool.uv.sources]
viewer = { workspace = true }

[project.scripts]
google-evalbench = "evalbench.evalbench:run"

[tool.setuptools.packages.find]
include = ["evalbench*"]

[tool.uv.workspace]
members = [
    "viewer",
]

[dependency-groups]
dev = [
    "pycodestyle>=2.14.0",
    "pytest>=8.0.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
